assets/index.css
:root {
    font-family: "Lato", sans-serif;
    scroll-behavior: smooth;

    font-size: 20px;
}

@media screen and (min-width: 750px) {
    :root {
        font-size: 24px;
    }
}

body.dark {
    --bg-color-a: hsl(0, 0%, 15%);
    --bg-color-b: hsl(0, 0%, 25%);
    --fg-color: hsl(0, 0%, 98%);

    --accent-a: hsl(229, 19%, 22%);
    --accent-b: hsl(218, 19%, 38%);

    --button-bg: hsl(18, 83%, 63%);
    --button-bg-hover: hsl(18, 50%, 49%);
    --button-fg: white;

    --link-color: var(--button-bg);

    --shadow-alpha: 0;
}

body.light {
    --bg-color-a: white;
    --bg-color-b: hsl(0, 0%, 98%);
    --fg-color: hsl(0, 0%, 16%);
    
    --accent-a: #4F5D75;
    --accent-b: hsl(229, 19%, 22%);

    --button-bg: hsl(18, 83%, 63%);
    --button-bg-hover: hsl(18, 50%, 49%);
    --button-fg: white;

    --link-color: var(--button-bg);

    --shadow-alpha: 0.2;
}

body, h1, h2, h3, h4, p, li {
    margin: 0;
    color: var(--fg-color);
}

body {
    background: var(--bg-color-a);
}

a {
    color: var(--link-color);
    margin: 0.5em 0;
    max-width: fit-content;
}


button:focus-visible, a:focus-visible, .settings-dropdown:focus-visible {
    outline: var(--button-bg-hover) dotted 0.3em;
}

.banner {
    background: var(--accent-a);
    padding: 10em 2em;
    position: relative;
}

.banner-divider {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.banner-divider svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 150px;
}

.banner-divider .shape-fill {
    fill: var(--bg-color-a);
}

.banner .title-wrap {
    z-index: 3;
}

.banner .title-wrap h1 {
    font-size: 4rem;
}

.banner .title-wrap h2 {
    margin-left: 1em;
}

.banner .title-wrap h1, .banner .title-wrap h2 {
    color: #fff;
}

#witch-hat {
    position: absolute;
    top: 30%;
    transform: translateY(-30%);
    mix-blend-mode: color-dodge;
    mix-blend-mode: plus-lighter;

    right: 0;
}

.settings-dropdown {
    z-index: 100;
    position: absolute;
    top: 2%;
    right: 2%;
}

.settings-dropdown #settings-cog {
    fill: #fff;
    cursor: pointer;
}

.settings-dropdown .settings-list {

    display: none;
    list-style: none;

    flex-flow: column;
    justify-content: center;
    align-items: center;

    background: var(--bg-color-a);
    padding: 1rem 1em;
    width: 100px;

    position: absolute;
    right: 0;
    top: 25px;
}

.settings-dropdown:hover .settings-list, .settings-dropdown:focus-within .settings-list {
    display: flex;
}

.settings-list button {
    background: none;
    border: none;
    cursor: pointer;
    font-family: inherit;

    color: var(--fg-color);
    margin: 0.5em 0;
}

.settings-list button:hover, .settings-list button:focus-visible {
    color: var(--button-bg-hover);
}

.settings-list button.activated {
    color: var(--button-bg-hover);
    text-decoration: underline;
}

.splash {
    scroll-snap-align: start;

    min-height: 100vh;

    display: flex;
    flex-flow: column;

    background: var(--bg-color-a);
}

.banner-nav {
    position: absolute;
    bottom: 0;
    left: 0;
    
    width: 100vw;

    box-sizing: border-box;

    display: flex;
    flex-flow: row wrap;
}

.banner-nav .nav-btn {
    padding: 1em 2em;
    margin: 0 2em;
    border: none;

    color: var(--button-fg);
    background-color: var(--button-bg);
    box-shadow: 1px 3px 5px -1px rgba(0, 0, 0, var(--shadow-alpha));
    

    text-transform: uppercase;
    text-decoration: none;
    font-weight: 600;
    font-size: 0.70rem;

    z-index: 1;


    cursor: pointer;
}

.banner-nav .nav-btn:hover {
    background-color: var(--button-bg-hover);
}

.sub-banner {
    width: min(1000px, 80vw);
    margin: auto auto;
    padding: 2em 0;
}

.down-arrow-wrap {
    display: flex;
    justify-content: center;
    align-items: bottom;

    padding-top: 10vh;
}

@keyframes bounce {
    0% {
        transform: translateY(0%);
    }

    50% {
        transform: translateY(-30px);
    }

    100% {
        transform: translateY(0%);
    }
}

#down-arrow {
    fill: var(--accent-a);
    animation: bounce 1300ms cubic-bezier(0,.78,.2,1.47);
}


@media (prefers-reduced-motion) {
    #down-arrow {
        animation: none;
    }
}

.second-section {
    background: var(--accent-b);
    position: relative;
    --fg-color: #fff;
}

.second-section, .third-section {
    padding: 4em 2em;
}

.para-wrap {
    display: flex;
    flex-flow: column;

    max-width: min(75ch, 98vw);
    margin: 0 auto;
}

.third-section {
    scroll-snap-align: start;
}

